CRUD,Narbar
-Admin adding station, frontend and backend changed. Able to select a existing operator and make a station on their name

-Created./Added Narbar to admin side

-